<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_language"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioGroup_languages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioButton_english"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButton_spanish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spanish"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButton_french"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/french"
            android:textSize="18sp" />

    </RadioGroup>

    <Button
        android:id="@+id/button_apply_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply_language"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:backgroundTint="#49C07C"/>

</LinearLayout>
