<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.slideshow.SlideshowFragment" >


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="265dp"
        android:layout_height="262dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="2dp" />

    <Button
        android:id="@+id/btn_terminos"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="288dp"
        android:backgroundTint="#49C07C"
        android:text="@string/terminos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_idioma"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="336dp"
        android:backgroundTint="#49C07C"
        android:text="@string/idioma"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_calificacion"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="384dp"
        android:backgroundTint="#49C07C"
        android:text="@string/calificacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_descuentos"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="432dp"
        android:backgroundTint="#49C07C"
        android:text="@string/descuento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>